--- a/W3/Workshop/package.json
+++ b/W3/Workshop/package.json
@@ -1,24 +1,15 @@
 {
-  "name": "w3",
+  "name": "workshop",
   "version": "1.0.0",
-  "description": "Week 3 Workshop",
+  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ryant4333/Web_Programming_2811ICT.git"
-  },
   "author": "Ryan Taylor",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ryant4333/Web_Programming_2811ICT/issues"
-  },
-  "homepage": "https://github.com/ryant4333/Web_Programming_2811ICT#readme",
   "dependencies": {
-    "body-parser": "^1.19.0",
     "express": "^4.17.1"
   }
 }
